<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ss.charles.spida.NewAssignmentFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pasteAssignment"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_menu_send"
        android:contentDescription="@string/desc_send_button"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearAssignment"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@android:drawable/ic_input_delete"
        android:contentDescription="@string/desc_clear_button"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/assignmentTopic"
        android:gravity="center"
        android:hint="@string/assignmentTopic"
        android:maxLength="35"
        android:layout_alignBottom="@+id/clearAssignment"
        android:layout_toEndOf="@+id/clearAssignment"
        android:layout_toRightOf="@+id/clearAssignment"
        android:layout_toLeftOf="@+id/pasteAssignment"
        android:layout_toStartOf="@+id/pasteAssignment" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/assignmentQuestions"
        android:layout_below="@+id/assignmentTopic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignRight="@+id/pasteAssignment"
        android:layout_alignEnd="@+id/pasteAssignment"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/assignmentQuestions"
        android:layout_above="@+id/deadlinePickerButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignmentDeadlineButton"
        android:id="@+id/deadlinePickerButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
