<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.ss.charles.spida.AssignmentViewFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignmentDeadline"
        android:textStyle="bold"
        android:id="@+id/assignmentDeadline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/notice_view_footer"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:paddingTop="50dp"
        android:paddingBottom="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assignmentQuestions"
            android:text="@string/assignmentQuestions"
            android:gravity="center"
            android:padding="16dp" />

    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/assignmentDate"
        android:gravity="center"
        android:text="@string/assignmentDate"
        android:textColor="@color/notice_view_footer_text"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="1dp"
        android:background="@color/notice_view_footer"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/assignmentSource"
        android:textColor="@color/notice_view_footer_text"
        android:textStyle="italic"
        android:id="@+id/assignmentSource"
        android:layout_above="@+id/assignmentDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:background="@color/notice_view_footer"/>

</RelativeLayout>
