<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ss.charles.spida.NewNoticeFragment">



    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/notice_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:contentDescription="@string/no_photo"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/noticeCaption"
                android:hint="@string/noticeCaption"
                android:maxLength="35"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pinNotice"
                android:src="@android:drawable/ic_menu_send" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/noticeBody"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/noticeBody"
        android:layout_below="@id/controls"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
